--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-title: "Oscar Petersen's Project Portfolio"
-remote_theme: pages-themes/cayman@v0.2.0
+title: Oscar Petersen's Project Portfolio
+theme: jekyll-theme-minima
